data/GitHubData/IssueContent/openj9_8111.txt
When building with cmake on windows there are a few errors of the form
```
....\vm29\pointer\generated\EnumLinesPointer.java:87: error: constructor EnumPointer in class EnumPointer cannot be applied to given types;
                super(address);
                ^
  required: long,Class<?>
  found: long
  reason: actual and formal argument lists differ in length
```

The classes in question are defined in the dia sdk headers, so I'm not sure how they are being brought in with the cmake builds but not the uma builds.

As a workarround the following can be added to the blacklist:

```
type:EnumSource
type:EnumSrc
type:SrcHeaderOut
type:SrcHeaderW
type:SrcHeader
type:EnumThunk
type:EnumLines
type:EnumSyms
```